--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>CSS Flex</h1>
+    <p></p>
+    <div class="flex-container" >
+        <span class="one" ></span>
+        <span class="two" ></span>
+        <span class="three" ></span>
+        <span class="four" ></span>
+        <span class="five" ></span>
+    </div>
 </body>
 </html>
