flex boxes added

--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>CSS Flex</h1>
     <p></p>
+    <h2>Default Flex Container</h2>
     <div class="flex-container" >
         <span class="one" ></span>
         <span class="two" ></span>
         <span class="three" ></span>
         <span class="four" ></span>
         <span class="five" ></span>
+        <span class="six" ></span>
     </div>
 </body>
 </html>
