--- a/index.html
+++ b/index.html
@@ -18,5 +18,14 @@
         <span class="five" ></span>
         <span class="six" ></span>
     </div>
+    <h2>flex-direction: row-reverse</h2>
+    <div class="flex-container flex-reverse" >
+        <span class="one" ></span>
+        <span class="two" ></span>
+        <span class="three" ></span>
+        <span class="four" ></span>
+        <span class="five" ></span>
+        <span class="six" ></span>
+    </div>
 </body>
 </html>
