--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>CSS Flex</h1>
     <p></p>
-    <h2>Default Flex Container</h2>
+    <h2>flex-direction: row (default)</h2>
     <div class="flex-container" >
         <span class="one" ></span>
         <span class="two" ></span>
@@ -20,6 +20,24 @@
     </div>
     <h2>flex-direction: row-reverse</h2>
     <div class="flex-container flex-reverse" >
+        <span class="one" ></span>
+        <span class="two" ></span>
+        <span class="three" ></span>
+        <span class="four" ></span>
+        <span class="five" ></span>
+        <span class="six" ></span>
+    </div>
+    <h2>flex-direction: column</h2>
+    <div class="flex-container column" >
+        <span class="one" ></span>
+        <span class="two" ></span>
+        <span class="three" ></span>
+        <span class="four" ></span>
+        <span class="five" ></span>
+        <span class="six" ></span>
+    </div>
+    <h2>flex-direction: column-reverse</h2>
+    <div class="flex-container column-reverse" >
         <span class="one" ></span>
         <span class="two" ></span>
         <span class="three" ></span>
