--- a/index.html
+++ b/index.html
@@ -11,39 +11,39 @@
     <p></p>
     <h2>flex-direction: row (default)</h2>
     <div class="flex-container" >
-        <span class="one" ></span>
-        <span class="two" ></span>
-        <span class="three" ></span>
-        <span class="four" ></span>
-        <span class="five" ></span>
-        <span class="six" ></span>
+        <span class="one" ><p>1</p></span>
+        <span class="two" ><p>2</p></span>
+        <span class="three" ><p>3</p></span>
+        <span class="four" ><p>4</p></span>
+        <span class="five" ><p>5</p></span>
+        <span class="six" ><p>6</p></span>
     </div>
     <h2>flex-direction: row-reverse</h2>
     <div class="flex-container flex-reverse" >
-        <span class="one" ></span>
-        <span class="two" ></span>
-        <span class="three" ></span>
-        <span class="four" ></span>
-        <span class="five" ></span>
-        <span class="six" ></span>
+        <span class="one" ><p>1</p></span>
+        <span class="two" ><p>2</p></span>
+        <span class="three" ><p>3</p></span>
+        <span class="four" ><p>4</p></span>
+        <span class="five" ><p>5</p></span>
+        <span class="six" ><p>6</p></span>
     </div>
     <h2>flex-direction: column</h2>
     <div class="flex-container column" >
-        <span class="one" ></span>
-        <span class="two" ></span>
-        <span class="three" ></span>
-        <span class="four" ></span>
-        <span class="five" ></span>
-        <span class="six" ></span>
+        <span class="one" ><p>1</p></span>
+        <span class="two" ><p>2</p></span>
+        <span class="three" ><p>3</p></span>
+        <span class="four" ><p>4</p></span>
+        <span class="five" ><p>5</p></span>
+        <span class="six" ><p>6</p></span>
     </div>
     <h2>flex-direction: column-reverse</h2>
     <div class="flex-container column-reverse" >
-        <span class="one" ></span>
-        <span class="two" ></span>
-        <span class="three" ></span>
-        <span class="four" ></span>
-        <span class="five" ></span>
-        <span class="six" ></span>
+        <span class="one" ><p>1</p></span>
+        <span class="two" ><p>2</p></span>
+        <span class="three" ><p>3</p></span>
+        <span class="four" ><p>4</p></span>
+        <span class="five" ><p>5</p></span>
+        <span class="six" ><p>6</p></span>
     </div>
 </body>
 </html>
